--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://192.168.68.126/alura_series
+spring.datasource.url=jdbc:postgresql://localhost/alura_series
 spring.datasource.username=postgres
 spring.datasource.password=SICSADM
 spring.datasource.driver-class-name=org.postgresql.Driver
